[tool.poetry]
name = "cfspopcon"
version = "8.0.0"
description = "Empirically-derived scoping of tokamak operational space."
authors = ["Commonwealth Fusion Systems"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.scripts]
popcon = 'cfspopcon.cli:run_popcon_cli'
cfspopcon = 'cfspopcon.cli:run_popcon_cli'
popcon_algorithms = 'cfspopcon.cli:write_algorithms_yaml'

[tool.poetry.dependencies]
# Updated to match radas requirement
python = ">=3.12"

# Synchronized with radas to ensure environment consistency
radas = "^1!1.0.1"
numpy = "^2.4.4"
scipy = "^1.17.1"
pandas = "^3.0.2"
xarray = ">=2026.2.0"
pint = "^0.25.3"
pint-xarray = "^0.6.1"
pyyaml = "^6.0.3"
click = "^8.3.2"

# cfspopcon specific dependencies
seaborn = "^0.13"
netcdf4 = "^1.7"
contourpy = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
coverage = "^7.13.5"
types-pyyaml = "^6.0.12.2"
pandas-stubs = "^3.0.0.260204"
mypy = "^1.15"
scipy-stubs = "^1.15.3.0"
ipdb = "^0.13.13"
nbmake = "^1.5"
ruff = "^0.15.10"

# Documentation
sphinx = "^9.1.0"
sphinx-rtd-theme = "^3.0"
sphinxcontrib-bibtex = "^2.6.1"
sphinx-copybutton = "^0.5.2"
nbsphinx = "^0.9"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=cfspopcon --cov-report term-missing --cov-report xml:coverage.xml --verbose -s --nbmake"
testpaths = ["tests", "docs/doc_sources"]
markers = [
    "docs: marks tests as testing the documentation",
    "cli: marks tests as testing the command-line-interface",
    "regression: marks tests as checking the regression result",
]
filterwarnings = [
  "error",
  "default::FutureWarning",
  "ignore:numpy.ndarray size changed:RuntimeWarning",
]

[tool.mypy]
strict = true
disallow_any_generics = false
exclude = ['^cfspopcon/plotting/.*\.py$']

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = [
    "A", "B", "C4", "D", "E", "ERA", "F", "FLY", "I001", 
    "ISC", "PERF", "PIE", "PGH", "PL", "Q", "RUF", "T10", 
    "TCH", "UP", "W"
]
ignore = [
    "E501",    # Line length handled by formatter
    "PLR0913", # Allow more arguments in scientific functions
    "PLR2004", # Magic values are common in physics constants
    "C408",    # Allow dict() calls
    "ISC001",  # Recommended ignore for ruff formatter
    "PLC0415", # Allow imports not at top of file
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.report]
fail_under = 82